distributedLock pattern is implemented in updateEventById method